# RAG_News

./: .gitignore  LICENSE  README.md  Update.md  langchain_example.py  pyproject.toml  rag_news.db  start_crawler.py  test.py  test_hot_sources.py  test_tieba.py
configs/: log_config.py
rag_news/: README.md  __init__.py  cache.py  main.py  rag_news.db  requirements.txt  start_api.py
rag_news/api/: README.md  auth.py  auth_routes.py  auth_utils.py  install_dependencies.py  knowledge_base_routes.py  routes.py  server.py
rag_news/collectors/crawlers/: base_crawler.py  google_spider.py
rag_news/configs/: config_example.yaml  log_config.py  main_config.py
rag_news/core/: database.py
rag_news/core/models/: knowledge_base.py  user.py
rag_news/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
rag_news/frontend/public/images/logos/: README.md
rag_news/frontend/src/: App.tsx  index.css  main.tsx
rag_news/frontend/src/components/: ProtectedRoute.tsx
rag_news/frontend/src/pages/: FontStyles.md  KnowledgeBase.css  KnowledgeBase.tsx  Login.css  Login.tsx  LoginOverride.css  Writing.css  Writing.tsx
rag_news/llm_models/: model.py  models.py
rag_news/processors/splitters/: text_splitter.py
rag_news/retrieval/embedders/: base_embedder.py
rag_news/storage/: __init__.py
rag_news/tests/: test_craw.py  test_craw_2.py
rag_news/utils/: logging.py
~/.config/uv/: config.toml
